variant api, fetcher and cache use refactoring